# cast

./: README.md  RUNS-CONFIG.sh  log4j.properties.client  no-audio-rec-start-it-all.sh  record-audio.sh  start-it-all.sh  update-latest-link.sh
cmake/: CMakeLists.txt  Slice2CppBenoit.cmake  build.properties.all-delmarre-zender  build.properties.all-shanker  build.properties.in  build.xml  cast-client-start.in  cast-server-start.in
subarchitectures/context.sa/src/c++/autogen/: CMakeLists.txt
subarchitectures/gui.sa/src/c++/: CMakeLists.txt
subarchitectures/mapping.sa/: CMakeLists.txt  build.xml  mainpage.dox  manifest.xml
subarchitectures/mapping.sa/config/cast/: mapping.cast
subarchitectures/mapping.sa/domains/: README  default.ns  default.nt  default.rdl  defaultandfuncmap.ns  funcmap.ns  funcmap.nt  funcmap.owl  funcmap.pprj  funcmap.rdl  funcmap_test_instances.nt
subarchitectures/mapping.sa/src/c++/: CASTReader.cpp  CASTReader.hpp  Conversions.hpp  FEMAreasGenerator.cpp  FEMAreasGenerator.hpp  FunctionalComputation.hpp  GeometricalComputation.hpp  OntologyQuerier.hpp  ROSMsgConstructors.hpp  findFarthestFreeSpacePoint.cpp  findFarthestFreeSpacePoint.hpp  findForwardUsingPointClouds.cpp  findForwardUsingPointClouds.hpp  findForwardUsingPointCloudsIterative.cpp  findForwardUsingPointCloudsIterative.hpp  pnpoly.hpp
subarchitectures/mapping.sa/src/c++/autogen/: CMakeLists.txt
subarchitectures/mapping.sa/src/java/de/dfki/lt/hfc/: BindingTableDecoder.java
subarchitectures/mapping.sa/src/slice/: mapping.ice  planningControl.ice
subarchitectures/mapping.sa/src/slice/eu/nifti/env/: AreaOfInterest.ice  CarObjectOfInterest.ice  ElementOfInterest.ice  FunctionalArea.ice  LocationOfInterest.ice  ObjectOfInterest.ice  Point3D.ice  Polygon.ice  Pose.ice  SignObjectOfInterest.ice  VantagePoint.ice  VictimObjectOfInterest.ice  Window.ice
subarchitectures/memory.sa/src/c++/autogen/: CMakeLists.txt
subarchitectures/navigation.sa/: CMakeLists.txt  build.xml  manifest.xml
subarchitectures/navigation.sa/config/cast/: dummy.cast  navigation.cast
subarchitectures/navigation.sa/src/c++/: NiftiNavigationGoals.cpp  NiftiNavigationGoals.hpp  ROSActionPublisher.cpp  ROSActionPublisher.hpp
subarchitectures/navigation.sa/src/c++/autogen/: CMakeLists.txt
subarchitectures/navigation.sa/src/slice/: navigation.ice
subarchitectures/planning.sa/: CMakeLists.txt  README.TXT  build.xml  mainpage.dox  manifest.xml
subarchitectures/planning.sa/config/cast/: basic.cast  dummy.cast  planning.cast  test.cast
subarchitectures/planning.sa/src/c++/: DummyPlanningTaskGenerator.cpp  DummyPlanningTaskGenerator.hpp  PlanningBridge.cpp  PlanningBridge.hpp  RobotStateReader.cpp  RobotStateReader.hpp  VPPlanner.cpp  VPPlanner.hpp
subarchitectures/planning.sa/src/c++/autogen/: CMakeLists.txt
subarchitectures/planning.sa/src/eclipseclp/: action_precond_axioms.ecl  action_time_constraints.ecl  axioms.ecl  bad_actions.ecl  components.ecl  em.ecl  em2.ecl  fluents.ecl  lovr_task.ecl  meta_predicates.ecl  plan_generator.ecl  platform.ecl  processes.ecl  s0.ecl  solve_constraints.ecl  temp_compatibility.ecl  temporal_relations.ecl  utils.ecl
subarchitectures/planning.sa/src/java/eu/nifti/guiplanning/: NIFTiGUIClientsManager.java  NIFTiGUIPlanningMessagesHandler.java
subarchitectures/planning.sa/src/java/eu/nifti/guiplanning/cast/: NIFTiGUIComponent.java
subarchitectures/planning.sa/src/java/eu/nifti/planning/cast/: IntentionTaskGenerator.java  IntentionToRomaPlanningTaskGenerator.java  PlanningCastComponent.java
subarchitectures/planning.sa/src/java/eu/nifti/planning/eclp/: EclipsePlanner.java  GoalException.java  PlanningException.java
subarchitectures/planning.sa/src/java/eu/nifti/planning/test/: PlanningTester.java
subarchitectures/planning.sa/src/slice/: ICASTPlanningMessageReceiver.ice  INIFTiGUIPlanningMessagesHandler.ice  planning.ice
subarchitectures/planning_roma.sa/: CMakeLists.txt  build.xml  manifest.xml
subarchitectures/planning_roma.sa/config/cast/: planning_roma.cast
subarchitectures/planning_roma.sa/src-generated/java/: .depend
subarchitectures/planning_roma.sa/src-generated/java/eu/nifti/Planning/slice/: Action.java  ActionHolder.java  ActionMode.java  ActionModeHolder.java  ActionPrx.java  ActionPrxHelper.java  ActionPrxHolder.java  ActionSeqHelper.java  ActionSeqHolder.java  Brake.java  (+186 more)
subarchitectures/planning_roma.sa/src/c++/: AREInterfaceComponent.cpp  AREInterfaceComponent.hpp  ActionFailureManager.cpp  ActionFailureManager.hpp  ArmComponent.cpp  ArmComponent.hpp  DiagnosticComponent.cpp  DiagnosticComponent.hpp  EmbeddedEclipse.cpp  EmbeddedEclipse.hpp  ExecutionMonitoring.cpp  ExecutionMonitoring.hpp  GapDetectionComponent.cpp  GapDetectionComponent.hpp  LidarComponent.cpp  LidarComponent.hpp  LocomotionComponent.cpp  LocomotionComponent.hpp  NavigationComponent.cpp  NavigationComponent.hpp  POSNAVWriter.cpp  POSNAVWriter.hpp  Parser.cpp  Parser.hpp  PlanningUtils.cpp  PlanningUtils.hpp  PoseWriter.cpp  PoseWriter.hpp  RobotStatusWriter.cpp  RobotStatusWriter.hpp  TaskWriter.cpp  TaskWriter.hpp  TopoSegBuilderComponent.cpp  TopoSegBuilderComponent.hpp  TopoSegReaderComponent.cpp  TopoSegReaderComponent.hpp
subarchitectures/planning_roma.sa/src/c++/autogen/: CMakeLists.txt
subarchitectures/planning_roma.sa/src/slice/: are.ice  diagnostic.ice  gap.ice  planning_roma.ice  robot_position.ice  robot_status.ice  topograph.ice
subarchitectures/ros_cast_bridge.sa/: CMakeLists.txt  build.xml  manifest.xml
subarchitectures/ros_cast_bridge.sa/config/cast/: ros_cast_bridge.cast
subarchitectures/ros_cast_bridge.sa/src/c++/: CMakeLists.txt
subarchitectures/ros_cast_bridge.sa/src/c++/eu/nifti/: ConverterUtil.hpp  ConverterUtil_Dialogue.hpp  ConverterUtil_GUI.hpp  ConverterUtil_Mapping.hpp  NIFTiCentralServer.cpp  NIFTiCentralServer.hpp  ROS_CAST_Converter.cpp  ROS_CAST_Converter.hpp
subarchitectures/ros_cast_bridge.sa/src/slice/eu/nifti/: RequestForROSTime.ice
subarchitectures/ros_cast_bridge.sa/src/slice/eu/nifti/ros/: Header.ice  Time.ice
(+254 files in other folders)
